<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_4"
    android:orientation="vertical"
    tools:context=".activity.CreditActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/icon_creator"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:fontFamily="@font/nunito"
        android:text="@string/icon_creator_link"
        android:textColorLink="@color/browser_actions_bg_grey"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/gradient_background"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:fontFamily="@font/nunito"
        android:text="@string/gradient_colors_link"
        android:textColorLink="@color/browser_actions_bg_grey"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/social_icons"
        android:textColor="#ffffff"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/twitter"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:fontFamily="@font/nunito"
        android:text="@string/twitter_link"
        android:textColorLink="@color/browser_actions_bg_grey"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/youtube"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autoLink="web"
        android:fontFamily="@font/nunito"
        android:text="@string/youtube_link"
        android:textColorLink="@color/browser_actions_bg_grey"
        android:textSize="16sp" />
</LinearLayout>